--- a/html-haiku/css/screen.css
+++ b/html-haiku/css/screen.css
@@ -1,1 +1,41 @@
+body {
+/* background-color: lightblue; */
+width: 90%;
+max-width: 370px;
+margin: auto;
+}
 
+p.haiku {
+background-color: gray;
+padding: 24px 25px 24px 25px;
+border: 3px solid black;
+margin: 24px 50px 24px 50px;
+text-align: left;
+max-width: 220px;
+font-family: fantasy, cursive;
+}
+
+h1.margin0 {
+margin-top: 0;
+margin-bottom: 0;
+text-align: center;
+color: blue;
+}
+
+h2.margin0 {
+margin-top: 0;
+margin-bottom: 0;
+text-align: center;
+color: gray;
+font-size: 100%;
+}
+
+h4.pretty {
+text-align: center;
+max-width: 370px;
+font-family: cursive, fantasy;
+}
+
+.middle {
+text-align: center;
+}
