--- a/tnr/css/screen.css
+++ b/tnr/css/screen.css
@@ -190,7 +190,8 @@ background-color: #ffd;}
 
 p.lh1 {line-height: 1.5;
 font-size: 150%;
-margin-bottom: 3em;}
+margin-bottom: 3em;
+text-decoration: none;}
 
 .size6
 {font-size: 1.2em;}
