--- a/tnr/css/screen.css
+++ b/tnr/css/screen.css
@@ -104,10 +104,12 @@ padding: 0em 0em 0em 0em;
 max-width: 450px;}
 
 
-h3 {font-size: 150%;
+h3 a {font-size: 150%;
 margin: 1.2em auto 0.5em auto;
-text-decoration: none;}
+  color: black;
+}
 
+a {text-decoration: none;}
 p {margin:auto auto 1em auto;}
 
 small {font-size: 50%;}
