--- a/tnr/css/screen.css
+++ b/tnr/css/screen.css
@@ -215,7 +215,7 @@ div:target p {
 }
 
 address {text-align:  right;
-  margin: 0 0 10em 0;)
+	margin: 0 0 10em 0;}
 
 h5 a {text-decoration: none;
 color: black;
