--- a/tnr/css/screen.css
+++ b/tnr/css/screen.css
@@ -227,3 +227,8 @@ h5 {font-size: 140%}
 p a {color: black;
 font-weight: bold;
 text-decoration: underline;}
+
+address span {font-size: 170%;
+margin: 1.2em auto 0.5em auto;
+  color: black;
+}
